Example with Whitted raytracing

--- a/e07_basic_raytracing.ipynb
+++ b/e07_basic_raytracing.ipynb
@@ -168,8 +168,8 @@
     "    Vertex v1 = vertices.data[indices.data[triangleIndex*3 + 1]];\n",
     "    Vertex v2 = vertices.data[indices.data[triangleIndex*3 + 2]];\n",
     "    vec3 coord = vec3(1 - HitAttribs.x - HitAttribs.y, HitAttribs.x, HitAttribs.y);\n",
-    "    vec3 N =  normalize(v0.N * coord.x + v1.N * coord.y + v2.N * coord.z);\n",
-    "    N = gl_ObjectToWorldEXT * vec4(N, 0);\n",
+    "    vec3 N =  v0.N * coord.x + v1.N * coord.y + v2.N * coord.z;\n",
+    "    N = normalize(gl_ObjectToWorldEXT * vec4(N, 0));\n",
     "    //ResultColor = vec4(N.x, N.y, N.z, 1);\n",
     "    vec3 light = vec3(3,3,0.3)/3.14159*max(0.1, dot(N, normalize(vec3(2,1,5))));\n",
     "    ResultColor = vec4(light.x, light.y, light.z, 1);\n",
