--- a/e08_shadow_cast.ipynb
+++ b/e08_shadow_cast.ipynb
@@ -163,8 +163,8 @@
     "    vec3 coord = vec3(1 - HitAttribs.x - HitAttribs.y, HitAttribs.x, HitAttribs.y);\n",
     "    vec3 P = v0.P * coord.x + v1.P * coord.y + v2.P * coord.z;\n",
     "    P = gl_ObjectToWorldEXT * vec4(P, 1);\n",
-    "    vec3 N =  normalize(v0.N * coord.x + v1.N * coord.y + v2.N * coord.z);\n",
-    "    N = gl_ObjectToWorldEXT * vec4(N, 0);\n",
+    "    vec3 N = v0.N * coord.x + v1.N * coord.y + v2.N * coord.z;\n",
+    "    N = normalize(gl_ObjectToWorldEXT * vec4(N, 0));\n",
     "    vec3 Lp = globals.light_pos;\n",
     "    float d = length(Lp - P);\n",
     "    vec3 L = (Lp - P)/d;\n",
